수정: 리스트 팝업 UI, 데이터 작업중

--- a/packages/frontend/src/layer_common.css
+++ b/packages/frontend/src/layer_common.css
@@ -44,6 +44,13 @@
     font-weight: bold;
 }
 
+.layer-title h2{
+	overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+	line-height: 32px;
+}
+
 .layer-btn-close {
     position: absolute;
     top: 20px;
